Build a custom Java Runtime Environment
Provide a Bash function to build a custom JRE runtime image using `jdeps` and `jlink`. This runtime can be bundled with the app to support Python-Bioformats dependent functions.